<resources>
    <string name="app_name">智力爭鋒IntelligenceCompetetion</string>
    <string name="login_background">bg</string>
    <string name="version">1.0.0 beta</string>
    <string name="Username">請輸入使用者名稱</string>
    <string name="UsernameHint">請輸入使用者名稱</string>
    <string name="passwordHint">請</string>
    <string name="UsernameShow">"帳號: "</string>
    <string name="PasswordShow">"密碼: "</string>
    <string name="AppName">智力爭鋒</string>
    <string name="loginText">登入</string>
    <string name="registerText">註冊</string>
    <string name="RegisterActivity_Registertext">註冊</string>
    <string name="registerActivity_email">"請輸入帳號: "</string>
    <string name="registerActivity_passwordText">請輸入密碼:</string>
    <string name="registerEmailInput">點此輸入帳號</string>
    <string name="registerActivityPasswordInput">點此輸入密碼</string>
    <string name="registerComplete">完成註冊</string>
</resources>